--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "nodemon main.js",
-    "start" : "node main.js"
+    "dev": "nodemon main.js",
+    "start": "npm run generate-data && node main.js",
+    "generate-data": "node generate-data.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
     "json-server": "^0.16.3"
   },
   "devDependencies": {
+    "faker": "^5.5.0",
     "nodemon": "^2.0.7"
   }
 }
