9- Custom output for LIST with pagination

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "homepage": "https://github.com/quangnguyen90/my_custom_json_server#readme",
   "dependencies": {
-    "json-server": "^0.16.3"
+    "json-server": "^0.16.3",
+    "query-string": "^7.0.0"
   },
   "devDependencies": {
     "faker": "^5.5.0",
